# storek3-x3

./: .gitignore  README.md
1 сем программирование/122/: in.txt  main.c
1 сем программирование/2/: main.c
1 сем программирование/4/: main.c
1 сем программирование/60/: main.c
1 сем программирование/final/: main.c
1 сем программирование/lab2/: main.c  text.txt
1 сем программирование/lab3/: main.c
2 sem prog/18/: 18.cpp  in.txt  life.cpp  life.h  out.txt
2 sem prog/2. dateTime/: datetime.cpp  datetime.h  main.cpp
2 sem prog/4.polynom/: main.cpp  polynom.cpp  polynom.h
2 sem prog/61/: 61.cpp  in.txt  number.cpp  number.h
2 sem prog/95/: 95.cpp  in.txt  robot.cpp  robot.h
2 sem prog/fraction/: fraction.cpp  fraction.hpp  main  main.cpp
2 sem prog/Словарь/: dictionary.c  dictionary.h  main.c
2 sem prog/зачётная задача/: degree.cpp  degree.h  main.cpp
3 sem prog/binary_tree/: benchmark  binary_tree.hpp  main  main.cpp  test  test.cpp
3 sem prog/diff/: main.go  secondfile.txt
3 sem prog/stack/: main.cpp  my_benchmark.cpp  stack.hpp  tests.cpp
3 sem prog/tcp_server/: chat.db
Java/Laba3/: One_N.java
JavaCheckWork1/: Main.java
JavaCheckWork1/var0/: Deck.java  Queue.java  Stack.java
JavaCheckWork1/var1/: Deck.java  (+2 more)
binary_tree/: binary_tree.hpp  main.cpp  my_benchmark.cpp
comput_mat/: HomeworkCompMath.py  MNISTnoFramework.ipynb  MNISTwithKeras.ipynb
programming sem3/lab1Stack/: CMakeLists.txt  Stack.h  StackExceptions.h  main.cpp
programming sem3/lab2Tree/: CMakeLists.txt  ThreadBST.cpp  ThreadBST.h  main.cpp
vycmat/: 1lab.py
(+430 files in other folders)
